--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Portal Industri Pertahanan"
 APP_ENV=local
 APP_KEY=base64:f+l65zwy+E6YyvmXY3LUX/dMRvA18uHzXGywYg5jHp8=
-APP_DEBUG=true
+APP_DEBUG=false
 DEBUGBAR_ENABLED=false
 APP_URL=https://portal.reverent-saha.203-142-6-111.plesk.page
 APP_TYPE="Defence Ministry"
