--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME="Portal Industri Pertahanan"
 APP_ENV=local
 APP_KEY=base64:f+l65zwy+E6YyvmXY3LUX/dMRvA18uHzXGywYg5jHp8=
-APP_DEBUG=false
-DEBUGBAR_ENABLED=false
+APP_DEBUG=true
+DEBUGBAR_ENABLED=true
 APP_URL=https://portal.reverent-saha.203-142-6-111.plesk.page
 APP_TYPE="Defence Ministry"
 APP_DESC=""
@@ -20,13 +20,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST="10.14.2.22"
+DB_HOST="localhost"
 DB_PORT=3306
-DB_DATABASE="admin_pipapp"
-DB_USERNAME="admin_pipapp"
-DB_PASSWORD="q+}5Lj-5XO5+DFw|[]"
+DB_DATABASE="admin_staging"
+DB_USERNAME="admin_staging"
+DB_PASSWORD="stgH~dVHr5ja6e9h?nd"
 
-JOOMLA_REG_LINK = "http://203.142.6.111/plesk-site-preview/myip.mod.gov.my/https/10.14.2.21/index.php?option=com_sppagebuilder&view=page&id=49"
+JOOMLA_REG_LINK = "https://myip.mod.gov.my"
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
