--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:f+l65zwy+E6YyvmXY3LUX/dMRvA18uHzXGywYg5jHp8=
 APP_DEBUG=true
 DEBUGBAR_ENABLED=true
-APP_URL=https://portal.reverent-saha.203-142-6-111.plesk.page
+APP_URL=https://staging-myip.boustead.com.my
 APP_TYPE="Defence Ministry"
 APP_DESC=""
 
