--- a/.env
+++ b/.env
@@ -18,6 +18,8 @@ LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+CACHE_DRIVER=database
+
 
 DB_CONNECTION=mysql
 DB_HOST="localhost"
