--- a/.env
+++ b/.env
@@ -28,6 +28,8 @@ DB_DATABASE="admin_staging"
 DB_USERNAME="admin_staging"
 DB_PASSWORD="stgH~dVHr5ja6e9h?nd"
 
+JOOMLA_WEB="https://myip.mod.gov.my"
+
 JOOMLA_REG_LINK = "https://myip.mod.gov.my"
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
