--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:f+l65zwy+E6YyvmXY3LUX/dMRvA18uHzXGywYg5jHp8=
 APP_DEBUG=true
 DEBUGBAR_ENABLED=true
-APP_URL="https://portal.reverent-saha.203-142-6-111.plesk.page"
+APP_URL=https://staging-myip.boustead.com.my
 APP_TYPE="Defence Ministry"
 APP_DESC=""
 
@@ -12,21 +12,25 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+CACHE_DRIVER=database
+
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST="localhost"
 DB_PORT=3306
-DB_DATABASE="pip"
-DB_USERNAME="root"
-DB_PASSWORD="root"
+DB_DATABASE="admin_staging"
+DB_USERNAME="admin_staging"
+DB_PASSWORD="stgH~dVHr5ja6e9h?nd"
 
+JOOMLA_WEB="https://myip.mod.gov.my"
+
+JOOMLA_REG_LINK = "https://myip.mod.gov.my"
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -37,8 +41,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database 
-JOOMLA_REG_LINK = "http://203.142.6.111/plesk-site-preview/myip.mod.gov.my/https/10.14.2.21/index.php?option=com_sppagebuilder&view=page&id=49"
+CACHE_STORE=database
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
@@ -47,14 +50,19 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=9ecdc9757421d5
-MAIL_PASSWORD=5f6482e60df1f8
+MAIL_HOST=boustead-com-my.mail.protection.outlook.com
+MAIL_PORT=25
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=noreply@myip.boustead.com.my
+MAIL_FROM_NAME="Portal IP System Notification"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
 VITE_APP_NAME="${APP_NAME}"
