--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,5 @@
+Header always set X-Content-Type-Options "nosniff"
+
 <IfModule mod_rewrite.c>
 <IfModule mod_negotiation.c>
 Options -MultiViews -Indexes
